[metadata]
name = colormapize
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
description = Generate a colormap from an image
long_description = file: README.rst
url = https://github.com/astrofrog/colormapize

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    click
    matplotlib
    pillow

[options.entry_points]
console_scripts =
    colormapize = colormapize.core:main
